--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSE 578: Project</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
+    <script type="module" src="js/main.js"></script>
   </head>
   <body>
     <h1>Yo!</h1>
-    <script src="js/main.js"></script>
+
+    <div id="rick_map" class="visElemnt"><b>Risk Map</b></div>
   </body>
 </html>
